# penultima-launcher

./: .gitignore  Cargo.toml  README.md  build.rs  install-client-feed-hook.ps1  publish-client-feed.ps1  publish-launcher-release.ps1
assets/: default-config.ini
src/: app_dirs.rs  cache.rs  cli.rs  client_version.rs  config_modal.rs  constants.rs  game_client.rs  instance_manager.rs  logger.rs  main.rs  message_system.rs  proxy.rs  proxy_status.rs  system.rs  tray_manager.rs  ui_components.rs  updates.rs  window_manager.rs
tools/client-feed-builder/: Cargo.toml
tools/client-feed-builder/src/: main.rs
